--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+.str-video__participant-details {
+  color: #191F1A;
+}
+
+.str-video__menu-container {
+  color: #191F1A;
+}
+
+.str-video__notification {
+  color: #FF0000;
+}
