--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,13 @@
 .str-video__notification {
   color: #FF0000;
 }
+
+input[type="datetime-local"] {
+  background-color: #191F1A;
+  color: #FF0000;
+}
+
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+  background-color: #FF0000;
+}
+
